--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -2,6 +2,8 @@
 @import 'components/account';
 @import 'components/team';
 @import 'components/addMember';
+@import 'components/properties';
+@import 'components/registration-successful';
 
 
 
