--- a/app/css/main.css
+++ b/app/css/main.css
@@ -95,6 +95,21 @@
   .state-body p {
     font-size: 20px; }
 
+#map-container #mapScript {
+  width: 100%;
+  height: 100%; }
+
+#map-container #menu {
+  position: absolute;
+  right: 15px;
+  top: 20px;
+  background: #fff;
+  padding: 10px;
+  font-family: 'Open Sans', sans-serif; }
+
+html, body, .wrapper, #map-container {
+  height: 100%; }
+
 .aside-inner {
   padding-top: 0 !important; }
 
