--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,10 +1,12 @@
 #company-icon {
-  background-color: #5d9cec;
   height: 100px;
   width: 100px;
   position: absolute;
-  left: 35px;
-  top: 35px; }
+  left: 18px;
+  top: 18px;
+  z-index: 1; }
+  #company-icon img {
+    width: 100%; }
 
 #login {
   position: relative; }
@@ -28,6 +30,8 @@
     height: 70px;
     background-color: #5d9cec;
     margin: 0 auto; }
+    #user #avatar img {
+      width: 100%; }
 
 .profile-picture-change {
   overflow: hidden; }
@@ -37,6 +41,9 @@
     background-color: #5d9cec;
     float: right;
     border-radius: 50%; }
+    .profile-picture-change .profile-picture img {
+      width: 100%;
+      border-radius: 50%; }
   .profile-picture-change a {
     line-height: 60px; }
 
@@ -95,6 +102,9 @@
   .state-body p {
     font-size: 20px; }
 
+#property button {
+  color: #FFF; }
+
 #map-container #mapScript {
   width: 100%;
   height: 100%; }
@@ -107,11 +117,33 @@
   padding: 10px;
   font-family: 'Open Sans', sans-serif; }
 
-html, body, .wrapper, #map-container {
+html, body, #mapPage, #map-container {
   height: 100%; }
 
-.aside-inner {
-  padding-top: 0 !important; }
+.wrapper {
+  background-image: url("../img/cartographer.jpg");
+  background-repeat: repeat;
+  background-size: 450px; }
+  .wrapper .topnavbar-wrapper .topnavbar {
+    background-color: #6D815B;
+    background-image: none; }
+
+.aside-inner .sidebar {
+  height: auto !important; }
+
+a {
+  color: #6D815B; }
+
+button {
+  background-color: #6D815B !important; }
+
+section {
+  background-image: url("../img/cartographer.jpg");
+  background-repeat: repeat;
+  background-size: 450px; }
 
 .panel {
   margin-top: 120px; }
+
+.form-control:focus {
+  border-color: #6D815B !important; }
