--- a/app/css/main.css
+++ b/app/css/main.css
@@ -105,17 +105,44 @@
 #property button {
   color: #FFF; }
 
-#map-container #mapScript {
-  width: 100%;
-  height: 100%; }
+#property #addPlot {
+  float: right; }
 
-#map-container #menu {
-  position: absolute;
-  right: 15px;
-  top: 20px;
-  background: #fff;
-  padding: 10px;
-  font-family: 'Open Sans', sans-serif; }
+#property hr {
+  border-width: 2px;
+  border-color: #6D815B;
+  margin: 5px 0; }
+
+#drawContaner .leaflet-draw-section {
+  width: 105px; }
+  #drawContaner .leaflet-draw-section .leaflet-draw-draw-polygon {
+    font-size: 17px;
+    padding-left: 24px;
+    text-decoration: none;
+    color: #6D815B; }
+  #drawContaner .leaflet-draw-section .leaflet-draw-actions-top {
+    white-space: normal;
+    width: 155px; }
+    #drawContaner .leaflet-draw-section .leaflet-draw-actions-top li {
+      float: left; }
+      #drawContaner .leaflet-draw-section .leaflet-draw-actions-top li a {
+        display: block; }
+
+#map-container {
+  margin-bottom: 0px !important; }
+  #map-container #mapScript {
+    width: 100%;
+    height: 100%; }
+  #map-container #menu {
+    position: absolute;
+    right: 15px;
+    top: 20px;
+    background: #fff;
+    padding: 10px;
+    font-family: 'Open Sans', sans-serif; }
+  #map-container #plots {
+    max-height: 150px;
+    overflow: auto; }
 
 html, body, #mapPage, #map-container {
   height: 100%; }
@@ -127,9 +154,23 @@ html, body, #mapPage, #map-container {
   .wrapper .topnavbar-wrapper .topnavbar {
     background-color: #6D815B;
     background-image: none; }
+    .wrapper .topnavbar-wrapper .topnavbar .navbar-nav a {
+      color: #FFF; }
+  .wrapper #company-icon-lower {
+    height: 100px;
+    width: 100px;
+    position: fixed;
+    left: 18px;
+    bottom: 18px;
+    z-index: 1100; }
+    .wrapper #company-icon-lower img {
+      width: 100%; }
 
-.aside-inner .sidebar {
+.aside-inner {
+  padding-top: 30px;
   height: auto !important; }
+  .aside-inner .sidebar {
+    height: auto !important; }
 
 a {
   color: #6D815B; }
@@ -142,8 +183,15 @@ section {
   background-repeat: repeat;
   background-size: 450px; }
 
+#plots {
+  max-height: 200px;
+  overflow: auto; }
+
 .panel {
   margin-top: 120px; }
 
 .form-control:focus {
   border-color: #6D815B !important; }
+
+.ui-menu.ui-widget.ui-widget-content.ui-autocomplete.ui-front {
+  z-index: 99999; }
