--- a/app/scss/components/map.scss
+++ b/app/scss/components/map.scss
@@ -2,9 +2,46 @@
   button{
     color:#FFF;
   }
+
+  #addPlot{
+    float: right;
+  }
+
+  hr{
+    border-width:2px;
+    border-color:#6D815B;
+    margin: 5px 0;
+  }
+}
+
+#drawContaner{
+  .leaflet-draw-section{
+    width:105px;
+
+    .leaflet-draw-draw-polygon{
+      font-size:17px;
+      padding-left:24px;
+      text-decoration: none;
+      color: #6D815B;
+    }
+
+    .leaflet-draw-actions-top{
+      white-space:normal;
+      width: 155px;
+      li{
+        float: left;
+        a{
+          display: block;
+        }
+      }
+    }
+  }
 }
 
 #map-container{
+
+  margin-bottom: 0px !important;
+
   #mapScript{
       width:100%;
       height: 100%;
@@ -17,5 +54,10 @@
       background: #fff;
       padding: 10px;
       font-family: 'Open Sans', sans-serif;
+    }
+
+    #plots{
+      max-height: 150px;
+      overflow: auto;
     }
 }
