--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -32,9 +32,10 @@ html, body, #mapPage ,#map-container {
     height: 100px;
     width: 100px;
     position: fixed;
-    left: 18px;
-    bottom: 18px;
+    right: 0px;
+    bottom: 20px;
     z-index: 1100;
+    background-color: #FFF;
 
     img{
       width: 100%;
@@ -64,11 +65,6 @@ section{
   background-size: 450px;
 }
 
-#plots{
-  max-height: 200px;
-  overflow: auto;
-}
-
 .panel{
   margin-top: 120px;
 }
@@ -79,4 +75,6 @@ section{
 
 .ui-menu.ui-widget.ui-widget-content.ui-autocomplete.ui-front{
     z-index:99999;
+    max-height:100px;
+    overflow: scroll;
 }
