--- a/app/scss/components/map.scss
+++ b/app/scss/components/map.scss
@@ -32,9 +32,16 @@
     .leaflet-draw-actions-top{
       white-space:normal;
       width: 155px;
+      li:first-child{
+        display:none;
+      }
       li{
         float: left;
+        width: 140px;
+        margin-left: -25px;
         a{
+          font-size: 15px;
+          text-align: center;
           display: block;
         }
       }
@@ -44,7 +51,7 @@
 
 #plots{
   max-height: 200px;
-  overflow: auto;
+  overflow-y: scroll;
   .form-control{
     border-radius:0 !important;
     display: inline-block;
