--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -12,17 +12,26 @@ html, body, #mapPage ,#map-container {
 }
 
 .wrapper{
+
   background-image: url("../img/cartographer.jpg");
   background-repeat: repeat;
   background-size: 450px;
 
+  .navbar-header{
+    background-color:#FFF;
+    .img-responsive{
+      max-width: 60%;
+    }
+  }
+
   .topnavbar-wrapper{
     .topnavbar{
-      background-color:#6D815B;
+      background-color: #6D815B;
       background-image: none;
       .navbar-nav{
         a{
           color:#FFF;
+          // color:#3a3f51;
         }
       }
     }
@@ -63,10 +72,6 @@ section{
   background-image: url("../img/cartographer.jpg");
   background-repeat: repeat;
   background-size: 450px;
-}
-
-.panel{
-  margin-top: 120px;
 }
 
 .form-control:focus{
