--- a/UAV-IQ-Marketing/app/scss/main.scss
+++ b/UAV-IQ-Marketing/app/scss/main.scss
@@ -1,10 +1,12 @@
-body{
+.home{
   font-family: 'Raleway', sans-serif;
+
 
   nav{
     background-color:none;
     position: absolute !important;
     width: 100%;
+    padding:0 20px;
 
     .navbar-brand{
       height: auto;
@@ -24,21 +26,22 @@ body{
   }
 
   .jumbotron{
-    padding-top: 158px !important;
+    padding-top: 130px !important;
     background-color:#fff;
     // background-image: url('../img/TV-Colchagua.png');
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    max-height:700px;
+    overflow: hidden;
 
     .container{
       color:#FFF;
 
       h1{
-        font-size: 35px;
+        font-size: 50px;
       }
 
       p{
-        font-size: 12px;
+        font-size: 25px;
       }
 
       .button{
@@ -51,8 +54,12 @@ body{
 
         span{
           display: block;
-          font-size:5.5px;
+          font-size:11px;
         }
+      }
+
+      .banner{
+        width:100%;
       }
     }
   }
@@ -60,6 +67,13 @@ body{
   .container-fluid{
       margin-top:20px;
       margin-bottom:20px;
+
+      .section-header{
+        font-size: 35px !important;
+      }
+      .section-sub-header{
+        font-size: 30px !important;
+      }
   }
 
   #industries{
@@ -71,10 +85,12 @@ body{
     .section-sub-header{
       text-align: center;
       font-size: 13px;
+
     }
     div{
       margin-top:30px;
       position: relative;
+      padding: 0 200px;
 
       img{
         width:100%;
@@ -83,10 +99,12 @@ body{
         transform: translateX(-50%);
         text-align: center;
         position: absolute;
+        font-size: 40px;
         color:#FFF;
         margin: 0;
         left: 50%;
         top: 40%;
+
       }
     }
     .fa{
@@ -94,6 +112,7 @@ body{
       margin-top: 25px;
       width: 100%;
       color: #ADADAD;
+      font-size: 30px;
     }
   }
 
@@ -102,37 +121,38 @@ body{
     .section-header{
       text-align: center;
       font-size: 13px;
+
     }
+
     .section-sub-header{
       text-align: center;
       font-size: 13px;
       color: #A3CB00;
-    }
-    div{
-      // margin-top:30px;
-      position: relative;
-      margin-top: -80px;
-      z-index: -1;
 
-      .background{
-        width:100%;
-      }
+    }
+
+    div{
+
+      background-image: url("../img/BG_zoom_level.png");
+      background-repeat: no-repeat;
+      background-size:100%;
+      margin: 50px 0;
+
 
       .asset{
-        position: absolute;
-        top: 0;
-        left:0;
         width: 100%;
+        display: block;
+      }
+
+      .second-asset{
+        height: 645px;
+        display: none;
+        margin: 0 auto;
       }
 
       h2{
-        transform: translateX(-50%);
         text-align: center;
-        position: absolute;
         color:#FFF;
-        margin: 0;
-        left: 50%;
-        top: 40%;
       }
     }
   }
@@ -151,8 +171,9 @@ body{
     .wrap{
       // margin-top:30px;
       position: relative;
-      margin-top: 20px;
+      margin-top: 50px;
       z-index: -1;
+      overflow: hidden;
 
       .left{
         ul{
@@ -164,7 +185,7 @@ body{
           padding: 0;
           li{
             font-size: 20px;
-            float: right;
+            // float: right;
             padding-right:40px;
             position: relative;
             margin-bottom:10px;
@@ -172,7 +193,7 @@ body{
               position: absolute;
               top:7px;
               right:0;
-              width:25px;
+              width:30px;
             }
           }
         }
@@ -192,8 +213,11 @@ body{
             img{
               position: absolute;
               top:7px;
-              left:0;
               width:30px;
+
+              @media only screen and (min-device-width: 1024px) {
+                left:0;
+              }
             }
           }
         }
@@ -204,6 +228,13 @@ body{
         // top: 0;
         // left:0;
         width: 100%;
+        display: block;
+      }
+
+      .tablet{
+        width: 100%;
+        padding:40px;
+        display: none;
       }
 
       h2{
@@ -253,7 +284,7 @@ body{
     margin:40px 0;
     position: relative;
     h4{
-      font-size:6px;
+      font-size:20px;
       text-align: center;
       margin:20px 0;
     }
@@ -281,7 +312,7 @@ body{
       div{
         margin:10px 0;
         label{
-          font-size:30px;
+          font-size:25px;
         }
 
         textarea{
@@ -296,8 +327,10 @@ body{
           color:#FFF;
           background-color:#ADADAD;
           height:50px;
-          font-size:25px;
+          font-size:20px;
           border:none;
+          padding: 1px 20px;
+
           &::-webkit-input-placeholder {
               color: #FFF;
           }
@@ -335,4 +368,126 @@ body{
       margin: 0 auto;
     }
   }
-}
+
+  @media only screen and (max-device-width: 1024px) {
+    .jumbotron{
+
+      .container{
+
+        h1{
+          font-size: 55px;
+          text-align: center;
+        }
+
+        p{
+          font-size: 25px;
+          text-align: center;
+        }
+
+        .button{
+          .btn{
+            background-color:#A3CB00;
+            border: none;
+            border-radius:0;
+            padding: 10px 35px;
+          }
+
+          span{
+            font-size:11px;
+          }
+        }
+
+        .banner{
+          width:100%;
+        }
+      }
+    }
+
+    #industries{
+      .section-header{
+        font-size: 35px;
+      }
+      .section-sub-header{
+        font-size: 30px;
+
+      }
+      div{
+
+        img{
+        }
+        h2{
+          font-size: 55px;
+        }
+      }
+      .fa{
+      }
+    }
+
+    #issue{
+      .section-header{
+        font-size: 35px;
+      }
+
+      .section-sub-header{
+        font-size: 30px;
+      }
+
+      div{
+        .asset{
+          width: 100%;
+          display: none;
+        }
+
+        .second-asset{
+          display: block;
+        }
+
+        h2{
+
+        }
+      }
+    }
+
+
+      .wrap{
+        .left{
+          ul{
+            li{
+              img{
+                position: initial;
+              }
+            }
+          }
+        }
+
+        .right{
+          ul{
+            text-align: right;
+            li{
+              padding-right: 40px;
+              padding-left: 0px;
+              img{
+                position: initial;
+                right: 0;
+              }
+            }
+          }
+        }
+
+        .phone{
+          display: none !important;
+        }
+
+        .tablet{
+          display: block !important;
+        }
+
+        h2{
+
+        }
+      }
+
+    }
+  }
+
+  @import "components/wineflight";
